--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       - "35729:35729"
     volumes:
       - .:/srv/jekyll
+      - /srv/jekyll/node_modules
     environment:
       - JEKYLL_ENV=development
-      - HOME=/srv/jekyll
+      - NODE_ENV=development
     tty: true
     stdin_open: true
