--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "@babel/register": "^7.23.7",
-    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.17",
     "browser-sync": "^3.0.2",
     "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
-    "cssnano": "^6.0.3",
-    "gulp": "^4.0.2",
+    "cssnano": "^7.0.6",
+    "gulp": "^5.0.0",
     "gulp-cli": "^3.0.0",
     "gulp-postcss": "^10.0.0",
     "postcss-import": "^16.0.0",
     "tailwindcss": "^3.4.1"
   },
   "scripts": {
-    "build:production": "cross-env NODE_ENV=production gulp",
-    "build:dev": "cross-env NODE_ENV=development gulp",
+    "build:production": "cross-env NODE_ENV=production gulp build",
+    "build:dev": "cross-env NODE_ENV=development gulp build",
     "build": "npm run build:production",
+    "watch": "cross-env NODE_ENV=development gulp dev",
     "dev": "docker-compose up",
     "start": "npm run dev",
     "stop": "docker-compose down",
