--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,28 @@
+# Build output
 _site
 _drafts
-.DS_Store
+
+# Cache
 .jekyll-cache
 .jekyll-metadata
+
+# Dependencies
 node_modules
 .bundle/
 vendor/
+
+# OS files
+.DS_Store
+
+# Local env files
+.env
+.env.*
+!.env.example
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# npm config
+.npmrc
